<?xml version="1.0"?>
<package format="2">
  <name>ssc_joystick</name>
  <version>3.0.1</version>
  <description>Passes driver command from a joystick to the speed and steering control modules</description>
  <license>MIT</license>

  <maintainer email="support.as.ap@hexagon.com">AutonomouStuff Support Team</maintainer>
  <author email="daniel.stanek@hexagon.com">Daniel Stanek</author>
  <author email="sneha.ganesh@hexagon.com">Sneha Ganesh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>automotive_platform_msgs</depend>
  <depend>automotive_navigation_msgs</depend>
  <depend>joy</depend>
  <depend>message_filters</depend>
  <depend>pacmod_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
