<?xml version="1.0"?>
<package format="2">
  <name>ssc_joystick</name>
  <version>4.0.0</version>
  <description>Passes driver command from a joystick to the speed and steering control modules</description>
  <license>MIT</license>

  <maintainer email="support.as.ap@hexagon.com">AutonomouStuff Support Team</maintainer>
  <author email="daniel.stanek@hexagon.com">Daniel Stanek</author>
  <author email="sneha.ganesh@hexagon.com">Sneha Ganesh</author>
  <author email="jilin.zhou@autonomoustuff.com">Jilin Zhou</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>automotive_platform_msgs</depend>
  <depend>automotive_navigation_msgs</depend>
  <depend>joy</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
